--- a/src/main/resources/public/static/css/main.css
+++ b/src/main/resources/public/static/css/main.css
@@ -9,16 +9,34 @@
     text-align: center;
 }
 
-
+#header-wrapper{
+    background: url(../images/background.jpg) no-repeat top center scroll;
+    background-size: cover;
+    font-weight: bold;
+    color: black;
+}
+#header h1{
+    color: #887850;
+    text-transform: uppercase;
+    font-weight: bold;
+}
 #header{
-    margin: 2em auto;
+    padding: 2em;
 }
 #header .logo{
-    background-image: url('../images/logo-300.png');
-    width: 300px;
-    height: 50px;
+    background: url('../images/logo-500.png') no-repeat;
+    width: 500px;
+    height: 500px;
     display: block;
     margin: auto;
+}
+
+@media screen and (max-width: 576px) {
+    #header .logo{
+        background-image: url('../images/logo-300.png');
+        width: 300px;
+        height: 300px;
+    }
 }
 
 
