--- a/src/main/resources/public/static/css/main.css
+++ b/src/main/resources/public/static/css/main.css
@@ -90,6 +90,9 @@ h1,h2, h3{
     text-align: center;
     font-weight: bold;
 }
+.card-text{
+    text-align: center;
+}
 
 #footer{
     text-align: center;
