--- a/src/main/webapp/app/src/app/menu/menu.component.html
+++ b/src/main/webapp/app/src/app/menu/menu.component.html
@@ -8,6 +8,9 @@
         <li class="nav-item" *ngIf="isAuthenticated()">
             <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
         </li>
+        <li class="nav-item" *ngIf="isInRole('ROLE_ADMIN')">
+            <a class="nav-link" routerLink="/files" routerLinkActive="active">Files</a>
+        </li>
     </ul>   
 
     <ul class="nav navbar-right">
