--- a/src/main/webapp/app/src/app/files/file-detail/file-detail.component.html
+++ b/src/main/webapp/app/src/app/files/file-detail/file-detail.component.html
@@ -21,8 +21,21 @@
         </div>
       </div>
       <div class="row form-group" *ngIf="file.name">
-        <div class="col-12">
-            <a href="api/file/{{file.uuid}}">{{file.name}}</a>
+        <div class="col-6">
+            FileName
+        </div>
+        <div class="col-6">
+            <div *ngIf="file.contentType.indexOf('image') != -1">
+              Preview
+            </div>
+        </div>
+        <div class="col-6 vcenter">
+            <a href="api/files/{{file.uuid}}" target="_blank">
+              {{file.name}}
+            </a>
+        </div>
+        <div class="col-6">
+            <img src="api/files/{{file.uuid}}" height="200px" *ngIf="file.contentType.indexOf('image') != -1"/>
         </div>
       </div>
 
