--- a/src/main/webapp/app/src/app/menu/menu.component.html
+++ b/src/main/webapp/app/src/app/menu/menu.component.html
@@ -11,6 +11,9 @@
         <li class="nav-item" *ngIf="isInRole('ROLE_ADMIN')">
             <a class="nav-link" routerLink="/files" routerLinkActive="active">Files</a>
         </li>
+        <li class="nav-item" *ngIf="isInRole('ROLE_ADMIN')">
+            <a class="nav-link" routerLink="/website/config" routerLinkActive="active">Website config</a>
+        </li>
     </ul>   
 
     <ul class="nav navbar-right">
