--- a/src/main/webapp/app/src/app/files/file-edit/file-edit.component.html
+++ b/src/main/webapp/app/src/app/files/file-edit/file-edit.component.html
@@ -4,7 +4,7 @@
   
         <div class="row form-group" *ngIf="file.id">
           <div class="col-12">
-              <img src="api/files/{{file.uuid}}" height="200px" *ngIf="file.contentType.indexOf('image') != -1"/>
+              <img src="api/files/{{file.uuid}}" height="100px" *ngIf="file.contentType.indexOf('image') != -1"/>
               <a href="api/files/{{file.uuid}}" target="_blank">
                 {{file.name}}
               </a>
@@ -14,13 +14,7 @@
   
         <div class="row form-group" *ngIf="!file.id">
           <div class="col-12">
-              <input type="file" class="form-control" #fileInput>
-          </div>
-        </div>
-  
-        <div class="form-group">
-          <div class="float-right">
-            <submit-button [status]="status" [disabled]="!fileForm.form.valid" value="Valider"></submit-button>
+              <input type="file" class="form-control" #fileInput (change)="onSubmit()">
           </div>
         </div>
   
