--- a/src/main/resources/templates/neverbackdown.html
+++ b/src/main/resources/templates/neverbackdown.html
@@ -4,6 +4,11 @@
     <title th:text="${site.title}">${site.title}</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+	<meta name="description" th:content="${site.description}">
+	<meta name="keywords" th:content="${site.keywords}">
+	<meta name="author" th:content="${site.author}">
+  
     <link rel="stylesheet" th:href="@{static/css/reset.css}" />
     <link rel="stylesheet" th:href="@{static/css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{static/css/root.css}" />
