--- a/src/main/webapp/app/src/app/website/config/config.component.html
+++ b/src/main/webapp/app/src/app/website/config/config.component.html
@@ -22,19 +22,19 @@
 
       <div class="row form-group">
         <div class="col-12">
-            <label>Description de référencement</label>
+            <label>Description (référencement)</label>
             <i18n type="text" [valuesByKey]="webSite.i18nFields" [key]="'website.meta.description'"></i18n>
         </div>    
       </div>
       <div class="row form-group">
         <div class="col-12">
-            <label>Mot clé de référence</label>
+            <label>Mots clés (référencement)</label>
             <i18n type="text" [valuesByKey]="webSite.i18nFields" [key]="'website.meta.keywords'"></i18n>
         </div>    
       </div>
       <div class="row form-group">
         <div class="col-12">
-            <label>Auteur de référencement</label>
+            <label>Auteur (référencement)</label>
             <i18n type="text" [valuesByKey]="webSite.i18nFields" [key]="'website.meta.author'"></i18n>
         </div>    
       </div>
