--- a/src/main/webapp/app/src/app/coach/coach-detail/coach-detail.component.html
+++ b/src/main/webapp/app/src/app/coach/coach-detail/coach-detail.component.html
@@ -27,22 +27,34 @@
 
 
       <div class="row form-group">
-        <div class="col-2">
-            <label>Compétences</label> <br/>
-            <button type="button" class="btn btn-primary" (click)="addCompetence()" >
-                <i class="fa fa-plus" aria-hidden="true"></i>
-            </button>
+        <div class="col-12">
+            <label>Compétences</label>            
         </div>
-
-        <div class="col-10">
-
-          <div class="row form-group" *ngFor="let c of competenceKeys(); let i = index">
-              <div class="col-12">
-                  <i18n type="text" [valuesByKey]="coach.competenceI18nFields" [key]="c"></i18n>
-              </div>
-          </div>
-        </div>    
       </div>
+      <div class="row form-group" *ngFor="let c of competenceKeys(); let i = index">
+          
+
+          <div class="col-10">
+              <i18n type="text" [valuesByKey]="coach.competenceI18nFields" [key]="c"></i18n>
+          </div>
+
+          <div class="col-2">
+              <button type="button" class="btn btn-danger pull-right" (click)="removeCompetenceAtIndex(c)" >
+                  <i class="fa fa-remove" aria-hidden="true"></i>
+              </button>
+          
+          </div>
+      </div>
+      
+      
+      <div class="row form-group">
+          <div class="col-12">
+              <button type="button" class="btn btn-primary pull-right" (click)="addCompetence()" >
+                  <i class="fa fa-plus" aria-hidden="true"></i>
+              </button>          
+          </div>
+        </div>
+        
 
       <div class="form-group">
         <div class="float-right">
