--- a/src/main/resources/templates/neverbackdown.html
+++ b/src/main/resources/templates/neverbackdown.html
@@ -40,7 +40,7 @@
         <div id="header-wrapper">
             <header id="header" class="container align-center">
                 <span class="logo" title="${site.title}"></span>
-                <p th:text="${site.slogan}"></p>
+                <p th:utext="${site.slogan}"></p>
             </header>
         </div>
         <nav id="nav">
