--- a/src/main/webapp/app/src/app/shared/i18n/i18n.component.html
+++ b/src/main/webapp/app/src/app/shared/i18n/i18n.component.html
@@ -10,6 +10,10 @@
 
   <textarea *ngIf="type == 'textarea'" class="form-control" aria-describedby="basic-addon1" 
     name="i18n.value" [(ngModel)]="i18n.value" row="5"></textarea>
+    
+  
+  <tiny-editor *ngIf="type == 'tiny-editor'" [elementId]="'tiny-' + i18n.id"
+  	[(value)]="i18n.value" style="width: 100%;"></tiny-editor>
 
 
 </div>
