--- a/src/main/webapp/app/src/app/website/config/config.component.html
+++ b/src/main/webapp/app/src/app/website/config/config.component.html
@@ -44,7 +44,7 @@
       <div class="row form-group">
           <div class="col-12">
               <label>Slogan du site</label>
-              <i18n type="textarea" [valuesByKey]="webSite.i18nFields" [key]="'website.slogan'"></i18n>
+              <i18n type="tiny-editor" [valuesByKey]="webSite.i18nFields" [key]="'website.slogan'"></i18n>
           </div>    
       </div>
       
