--- a/src/main/webapp/app/src/app/home/home.component.html
+++ b/src/main/webapp/app/src/app/home/home.component.html
@@ -1,3 +1,15 @@
-<p>
-  home works!
-</p>
+
+<h1 style="text-align: center;">Bienvenue sur le backoffice de Never Back Down</h1>
+
+<div class="list-group">
+		 <a class="list-group-item" routerLink="/website/config" routerLinkActive="active" title="Website config">
+                <i class="fa fa-gear" aria-hidden="true"></i> Config général du site
+         </a>
+            <a class="list-group-item" routerLink="/coach" routerLinkActive="active" title="Coachs">
+                <i class="fa fa-vcard" aria-hidden="true"></i> Les coachs
+            </a>
+        <a class="list-group-item" routerLink="/program" routerLinkActive="active" title="Programs">
+            <i class="fa fa-tags" aria-hidden="true"></i> Les programmes
+        </a>
+
+</div>
