--- a/src/main/webapp/app/src/app/menu/menu.component.html
+++ b/src/main/webapp/app/src/app/menu/menu.component.html
@@ -27,6 +27,11 @@
                 <i class="fa fa-vcard" aria-hidden="true"></i>
             </a>
         </li>
+        <li class="nav-item" *ngIf="isInRole('ROLE_MANAGER')">
+            <a class="nav-link" routerLink="/program" routerLinkActive="active" title="Programs">
+                <i class="fa fa-tags" aria-hidden="true"></i>
+            </a>
+        </li>
     </ul>   
 
     <ul class="nav navbar-right">
